unpackaged/main/default/objects/Pets__c/Pets__c.object-meta.xml
<CustomObject>
    <description>Information about pets and all sorts of different outdoors and indoor animals</description>
    <label>Pets</label>
    <nameField>
        <label>Pets Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>