unpackaged/main/default/objects/Pets__c/fields/adoptableness__c.field-meta.xml
<CustomField>
    <fullName>adoptableness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>adoptableness</label>
    <type>Checkbox</type>
</CustomField>