unpackaged/main/default/objects/Pets__c/fields/ahhhh__c.field-meta.xml
<CustomField>
    <fullName>ahhhh__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ahhhh</label>
    <type>Checkbox</type>
</CustomField>