unpackaged/main/default/objects/Pets__c/fields/Amphibian__c.field-meta.xml
<CustomField>
    <fullName>Amphibian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amphibian</label>
    <type>Checkbox</type>
</CustomField>