unpackaged/main/default/objects/Pets__c/fields/Angry__c.field-meta.xml
<CustomField>
    <fullName>Angry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Angry</label>
    <type>Checkbox</type>
</CustomField>