unpackaged/main/default/objects/Pets__c/fields/carnivores__c.field-meta.xml
<CustomField>
    <fullName>carnivores__c</fullName>
    <defaultValue>false</defaultValue>
    <label>carnivores</label>
    <type>Checkbox</type>
</CustomField>