unpackaged/main/default/objects/Pets__c/fields/Cost_of_pet__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_pet__c</fullName>
    <label>Cost of pet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>