unpackaged/main/default/objects/Pets__c/fields/Discount_Allowed_Again__c.field-meta.xml
<CustomField>
    <fullName>Discount_Allowed_Again__c</fullName>
    <label>Discount Allowed Again</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>