unpackaged/main/default/objects/Pets__c/fields/does_the_animal_have_wings__c.field-meta.xml
<CustomField>
    <fullName>does_the_animal_have_wings__c</fullName>
    <defaultValue>false</defaultValue>
    <label>does the animal have wings</label>
    <type>Checkbox</type>
</CustomField>