unpackaged/main/default/objects/Pets__c/fields/Furry__c.field-meta.xml
<CustomField>
    <fullName>Furry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furry?</label>
    <type>Checkbox</type>
</CustomField>