unpackaged/main/default/objects/Pets__c/fields/Has_Application__c.field-meta.xml
<CustomField>
    <fullName>Has_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Application</label>
    <type>Checkbox</type>
</CustomField>