unpackaged/main/default/objects/Pets__c/fields/Has_Claws__c.field-meta.xml
<CustomField>
    <fullName>Has_Claws__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Claws</label>
    <type>Checkbox</type>
</CustomField>