unpackaged/main/default/objects/Pets__c/fields/has_fur__c.field-meta.xml
<CustomField>
    <fullName>has_fur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has fur?</label>
    <type>Checkbox</type>
</CustomField>