unpackaged/main/default/objects/Pets__c/fields/Has_licence__c.field-meta.xml
<CustomField>
    <fullName>Has_licence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has licence?</label>
    <type>Checkbox</type>
</CustomField>