unpackaged/main/default/objects/Pets__c/fields/has_lots_of_fur__c.field-meta.xml
<CustomField>
    <fullName>has_lots_of_fur__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has lots of fur</label>
    <type>Checkbox</type>
</CustomField>