unpackaged/main/default/objects/Pets__c/fields/have_one__c.field-meta.xml
<CustomField>
    <fullName>have_one__c</fullName>
    <defaultValue>false</defaultValue>
    <label>have one?</label>
    <type>Checkbox</type>
</CustomField>