unpackaged/main/default/objects/Pets__c/fields/lol__c.field-meta.xml
<CustomField>
    <fullName>lol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>lol</label>
    <type>Checkbox</type>
</CustomField>