unpackaged/main/default/objects/Pets__c/fields/Mammals__c.field-meta.xml
<CustomField>
    <fullName>Mammals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mammals</label>
    <type>Checkbox</type>
</CustomField>