unpackaged/main/default/objects/Pets__c/fields/pet__c.field-meta.xml
<CustomField>
    <fullName>pet__c</fullName>
    <defaultValue>false</defaultValue>
    <description>nrgnsgjfs</description>
    <label>pet</label>
    <type>Checkbox</type>
</CustomField>