unpackaged/main/default/objects/Pets__c/fields/pets__c.field-meta.xml
<CustomField>
    <fullName>pets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test if pet</description>
    <label>pet</label>
    <type>Checkbox</type>
</CustomField>