unpackaged/main/default/objects/Pets__c/fields/Reptile__c.field-meta.xml
<CustomField>
    <fullName>Reptile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reptile?</label>
    <type>Checkbox</type>
</CustomField>