unpackaged/main/default/objects/Pets__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Requirements?</label>
    <type>Checkbox</type>
</CustomField>