unpackaged/main/default/objects/Pets__c/fields/Spiky__c.field-meta.xml
<CustomField>
    <fullName>Spiky__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spiky?</label>
    <type>Checkbox</type>
</CustomField>