unpackaged/main/default/objects/Pets__c/fields/Whale__c.field-meta.xml
<CustomField>
    <fullName>Whale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Whale?</label>
    <type>Checkbox</type>
</CustomField>