unpackaged/main/default/objects/Pets__c/fields/Zzz__c.field-meta.xml
<CustomField>
    <fullName>Zzz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zzz</label>
    <type>Checkbox</type>
</CustomField>